@@ -1,5 +1,15 @@
 2011-12-13  Vsevolod Vlasov  <vsevik@chromium.org>
 
+        Web Inspector: TreeOutline's is broken when li elements have padding-left different from 14px.
+        https://bugs.webkit.org/show_bug.cgi?id=74445
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/treeoutline.js:
+        (TreeElement.prototype.isEventWithinDisclosureTriangle):
+
+2011-12-13  Vsevolod Vlasov  <vsevik@chromium.org>
+
         Web Inspector: [Regression] Scripts panel debug sidebar toolbar should not be scrolled out of the screen.
         https://bugs.webkit.org/show_bug.cgi?id=74447
 
